--- a/index.html
+++ b/index.html
@@ -289,9 +289,10 @@ cgLoadingStart();
 window.addEventListener('load', () => {
   setup();
   cgLoadingStop();
-  setTimeout(maybeOfferDailyBonusInt, 1500);
+  setTimeout(maybeOfferDailyBonusInt, 2600); // بعد ما السبلّاش يختفي
 });
 </script>
 </body>
 </html>
+
 
